SUPER MINOR REVISION NUMBERS WON'T SHOW UP IN GITHUB BUT IT'LL HELP
ME ORGANIZE WHEN I MADE A SET OF FIXES

UAP-2.1.0
 - ADD: support for custom regexes.json files (via @pravindahal)
 - FIX: formerly private vars/functions are now protected (via @pravindahal)
 - FIX: command line tool gets 'pretty' option for PHP 5.4 users (via @skyzyx)
 - FIX: refactored the regexes.yaml test suite
 - THX: thanks to @pravindahal and @skyzyx for the pull requests
 
UAP-2.0.1
 - FIX: renamed uaParser, osParser, & deviceParser to uaParse, osParse, & deviceParse to address a bug with uaParser being recognized as the contruct function for the overall lib
 - FIX: updated the test lib so that device failures are properly formatted

UAP-2.0.0
 - ADD: toString() converts the version bits and family into a simple string
 - ADD: toVersionString() converts the version bits into a simple string
 - ADD: toFullString() combines the UA and OS family and version bits
 - ADD: "convert" flag for uaparser-cli.php
 - ADD: "pull & save just regexes.yaml" flag for uaparser-cli.php
 - FIX: library is now a dynamic class
 - FIX: attributes are now nested & populated like the other ua-parser libraries (e.g. $result->family is now $result->ua->family)
 - FIX: uaParser(), osParser(), and deviceParser() are now public functions
 - FIX: saves regexes.yaml as JSON for better performance
 - FIX: removed the __DIR__ "fix"
 - FIX: Apache log parsing now returns results when UA or OS families are set to "Other" and the device is listed as a smartphone or generic feature phone
 - FIX: all tabs are now spaces
 - FIX: a UA is now run against all three parsers
 - FIX: renamed $debug var to $log to better reflect what it does
 - DEL: is* boolean attributes (e.g. isMobile) have been removed
 - DEL: will no longer auto-parse $_SERVER['HTTP_USER_AGENT'] if available
 - DEL: tests no longer run against pgts_browser_list.yaml
 - THX: thanks to @rjd22 for the dynamic class code/fix

UAP-1.5.0